[package]
name = "radiko_recorder"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.11", features = ["blocking", "rustls-tls"] }
quick-xml = { version = "0.27", features = ["serialize"] }
serde = { version = "1.0", features = ["derive"] }
base64 = "0.21"
log = "0.4"
env_logger = "0.10"
