[package]
name = "radiko_recorder"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
reqwest = { version = "0.12.12", features = ["blocking", "rustls-tls"] }
quick-xml = { version = "0.37.2", features = ["serialize"] }
serde = { version = "1.0", features = ["derive"] }
base64 = "0.22.1"
log = "0.4"
env_logger = "0.11.6"
regex = "1"

[profile.dev]
opt-level = 0
